<resources>
    <string name="app_name">HubletInternAndroid</string>
    <string name="title">The best app for your plants</string>
    <string name="signIn">Sign In Here</string>
    <string name="createAcc">Create New Account</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype password</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="change_info">Change info</string>
    <string name="plants_list">Plants list</string>
    <string name="name">Name</string>
    <string name="title_activity_bubble">notification</string>

</resources>