<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfileActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/user_image"
        android:contentDescription="@string/app_name"
        android:src="@drawable/round_account_circle_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/name"
            android:textAlignment="textStart"
            android:textColor="@color/green"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/email"
            android:textAlignment="textStart"
            android:textColor="@color/green"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/txt_date_of_birth"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/date_of_birth"
            android:textAlignment="textStart"
            android:textColor="@color/green"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/txt_plants_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/plants_list"
            android:textAlignment="textStart"
            android:textColor="@color/green"
            android:textSize="15sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/change_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/green"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/change_info"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>


</RelativeLayout>

