<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:ignore="ExtraText">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/full_name"
            android:importantForAutofill="no"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="30dp"
            android:layout_marginBottom="10dp"
            android:textAlignment="viewStart"
            android:background="@drawable/edittext_round_corner"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="30dp"
            android:layout_marginBottom="10dp"
            android:textAlignment="viewStart"
            android:background="@drawable/edittext_round_corner"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/date_of_birth"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="30dp"
            android:layout_marginBottom="10dp"
            android:textAlignment="viewStart"
            android:background="@drawable/edittext_round_corner"/>
        />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:hint="@string/password"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="30dp"
            android:layout_marginBottom="10dp"
            android:textAlignment="viewStart"
            tools:ignore="TextFields"
            android:background="@drawable/edittext_round_corner"/>
        />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/retype_password"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="30dp"
            android:textAlignment="viewStart"
            android:background="@drawable/edittext_round_corner"/>
        />


        />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_marginBottom="30dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:backgroundTint="@color/green"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>